--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <!--Empieza Pagina -->
-    <div class="container-fluid">
+    <div class="container-fluid" id="container">
         <div class="row" id="top__menu">
             <div class="col-md-12 col-xs-6"></div>
         </div>
@@ -92,7 +92,7 @@
             <div class="col-md-12 col-xs-6">
                 <div class="flexbox">
                     <div>
-                        <h2>¿Por qué trabajar con nosotros?</h2>
+                        <h1>¿Por qué trabajar con nosotros?</h1>
                         <img src="images/jobs.png" class="rounded mx-auto d-block" alt="">
                     </div>
                     <div>
