--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
-    <title>Bootstrap</title>
+    <title>Soluciones Integrales - Inicio</title>
 </head>
 <body>
 <!--Empieza Pagina -->
